# rastreabilidade

./: Cargo.toml  README.md
migrations/: 20240726024730_create_crops_table.sql  20240726024745_create_batches_table.sql
src/: errors.rs  main.rs
src/dtos/: batch_dto.rs  crop_dto.rs  mod.rs
src/misc/: date_validation.rs  mod.rs  utils.rs
src/models/: batch.rs  crop.rs  mod.rs
src/repositories/: batch_repository.rs  crop_repository.rs  mod.rs
src/routes/: mod.rs
src/routes/batch/: delete_batch.rs  get_batch_by_id.rs  insert_batch.rs  list_batches.rs  mod.rs  update_batch.rs
src/routes/crop/: delete_crop.rs  find_crop_by_id.rs  insert_crop.rs  list_crop.rs  mod.rs  update_crop.rs
src/services/: batch_service.rs  crop_service.rs  mod.rs
